Fix navbar so it pushes content down instead of covering it up

--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ button:focus{
     outline: none !important;
 }
 .portfolio-container {
-    margin-top: 200px;
+    margin-top: 20px;
     margin-bottom: 100px;
     background-image: url("../src/assets/cork-board.png") !important;
     /* background-color: rgba(100, 135, 100, 0.8) !important; */
@@ -351,7 +351,7 @@ button:focus{
     margin-right: auto;
     height: auto;
     padding: 20px;
-    margin-top: 120px;
+    margin-top: 20px;
     margin-bottom: 50px;
 }
 
@@ -362,7 +362,7 @@ button:focus{
     margin-left: auto;
     margin-right: auto;
     /* margin-bottom: 40px; */
-    margin-top: 40px;
+    margin-top: 0px;
     text-align: center;
     color:white;
     background-color: #7f9288;
@@ -371,7 +371,7 @@ button:focus{
     padding: 10px;
 }
 .ResumePageContainer {
-    margin-top: 180px;
+    margin-top: 20px;
    
    
 }
@@ -476,7 +476,7 @@ button:focus{
     width: 600px;
     height: 100%;
     margin: 0 ;
-    padding: 50px;
+    padding: 50px 20px 20px 20px;
 }
 
 .resumePNG {
@@ -618,7 +618,7 @@ button:focus{
         width: 80%;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 180px;
+        margin-top: 20px;
     }
         
 }
@@ -664,7 +664,7 @@ button:focus{
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 180px;
+        margin-top: 20px;
     }
     .card-content > ul > li > h1 {
         font-size: 30px !important;
@@ -674,9 +674,11 @@ button:focus{
 
 
 @media screen and (max-width: 580px) {
-   
+    .navbar-nav > li {
+        font-size: 20px;
+    }
     .about-container{
-        margin-top:100px;
+        margin-top:20px;
     }
     .about-container .title{
         margin-bottom: 0px;
@@ -694,7 +696,7 @@ button:focus{
         border-radius: 0mm;
     }
     .contact-box{
-        margin-top: 175px;
+        margin-top: 20px;
         text-align: center;
     }
     .contactTripp {
